gramatica.output
Estado 71 conflictos: 1 desplazamiento/reducción
Estado 158 conflictos: 9 reducción/reducción
Estado 162 conflictos: 1 desplazamiento/reducción


Gramática

    0 $accept: Programa $end

    1 Programa: Cabecera_programa bloque

    2 bloque: Inicio_de_bloque Declar_de_variables_locales Declar_de_subprogs Sentencias Fin_de_bloque

    3 Declar_de_subprogs: Declar_de_subprogs Declar_subprog
    4                   | %empty

    5 Declar_subprog: Cabecera_subprograma bloque

    6 Declar_de_variables_locales: INITVAR Variables_locales ENDVAR

    7 Cabecera_programa: MAIN

    8 Inicio_de_bloque: LEFT_KEY

    9 Fin_de_bloque: RIGHT_KEY

   10 Variables_locales: Variables_locales Cuerpo_declar_variables
   11                  | Cuerpo_declar_variables

   12 Cuerpo_declar_variables: tipo list_id SEMICOLON

   13 Cabecera_subprograma: tipo ID LEFT_PARENTHESIS argumentos RIGHT_PARENTHESIS

   14 argumentos: argumentos COMA argumento
   15           | argumento

   16 argumento: tipo ID

   17 Sentencias: Sentencias Sentencia
   18           | Sentencia

   19 Sentencia: bloque
   20          | sentencia_asignacion
   21          | sentencia_if
   22          | sentencia_while
   23          | sentencia_entrada
   24          | sentencia_salida
   25          | sentencia_return
   26          | sentencia_for
   27          | sentencia_list

   28 sentencia_asignacion: ID ASSIGN expresion SEMICOLON

   29 sentencia_if: IF LEFT_PARENTHESIS expresion RIGHT_PARENTHESIS THEN Sentencia
   30             | IF LEFT_PARENTHESIS expresion RIGHT_PARENTHESIS THEN Sentencia ELSE Sentencia

   31 sentencia_while: WHILE LEFT_PARENTHESIS expresion RIGHT_PARENTHESIS Sentencia

   32 sentencia_entrada: IN list_id SEMICOLON

   33 sentencia_salida: OUT list_expresiones_o_cadena SEMICOLON

   34 sentencia_return: RETURN expresion SEMICOLON

   35 sentencia_for: FOR LEFT_PARENTHESIS expresion TO expresion COMA expresion RIGHT_PARENTHESIS DO Sentencia
   36              | FOR LEFT_PARENTHESIS expresion RIGHT_PARENTHESIS DO Sentencia

   37 sentencia_list: expresion LIST_OP
   38               | DOLLAR expresion

   39 expresion: LEFT_PARENTHESIS expresion RIGHT_PARENTHESIS
   40          | NEG_COUNT_QUEST expresion
   41          | PLUSPLUS expresion
   42          | MINUSMINUS expresion
   43          | SYMBOL_OP expresion
   44          | expresion SYMBOL_OP expresion
   45          | expresion BINARY_OP expresion
   46          | expresion AND_OP expresion
   47          | expresion OR_OP expresion
   48          | expresion XOR_OP expresion
   49          | expresion RELATION_OP expresion
   50          | expresion EQUALS_OP expresion
   51          | expresion AT expresion
   52          | expresion MINUSMINUS expresion
   53          | ID
   54          | constante
   55          | funcion
   56          | expresion PLUSPLUS expresion AT expresion

   57 funcion: ID LEFT_PARENTHESIS list_expresiones RIGHT_PARENTHESIS
   58        | ID LEFT_PARENTHESIS RIGHT_PARENTHESIS

   59 list_expresiones_o_cadena: list_expresiones_o_cadena COMA exp_cad
   60                          | exp_cad

   61 exp_cad: expresion
   62        | CADENA

   63 constante: CONST_INT
   64          | CONST_DOUBLE
   65          | CONST_CHAR
   66          | CONST_BOOLEAN
   67          | const_list_int
   68          | const_list_double
   69          | const_list_boolean
   70          | const_list_char

   71 list_expresiones: list_expresiones COMA expresion
   72                 | expresion

   73 tipo: tipo_elemental
   74     | LIST_OF tipo_elemental

   75 tipo_elemental: BASIC_TYPES

   76 const_list_int: LEFT_BRACKET list_int RIGHT_BRACKET

   77 list_int: list_int COMA CONST_INT
   78         | CONST_INT

   79 const_list_double: LEFT_BRACKET list_double RIGHT_BRACKET

   80 list_double: list_double COMA CONST_DOUBLE
   81            | CONST_DOUBLE

   82 const_list_boolean: LEFT_BRACKET list_boolean RIGHT_BRACKET

   83 list_boolean: list_boolean COMA CONST_BOOLEAN
   84             | CONST_BOOLEAN

   85 const_list_char: LEFT_BRACKET list_char RIGHT_BRACKET

   86 list_char: list_char COMA CONST_CHAR
   87          | CONST_CHAR

   88 list_id: list_id COMA ID
   89        | ID


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
MAIN (258) 7
LEFT_KEY (259) 8
RIGHT_KEY (260) 9
LEFT_BRACKET (261) 76 79 82 85
RIGHT_BRACKET (262) 76 79 82 85
SEMICOLON (263) 12 28 32 33 34
LEFT_PARENTHESIS (264) 13 29 30 31 35 36 39 57 58
RIGHT_PARENTHESIS (265) 13 29 30 31 35 36 39 57 58
COMA (266) 14 35 59 71 77 80 83 86 88
ASSIGN (267) 28
IF (268) 29 30
THEN (269) 29 30
ELSE (270) 30
WHILE (271) 31
RETURN (272) 34
FOR (273) 35 36
TO (274) 35
DO (275) 35 36
OUT (276) 33
IN (277) 32
INITVAR (278) 6
ENDVAR (279) 6
LIST_OF (280) 74
BASIC_TYPES (281) 75
CONST_INT (282) 63 77 78
CONST_DOUBLE (283) 64 80 81
CONST_BOOLEAN (284) 66 83 84
CONST_CHAR (285) 65 86 87
CADENA (286) 62
ID (287) 13 16 28 53 57 58 88 89
OR_OP (288) 47
AND_OP (289) 46
XOR_OP (290) 48
EQUALS_OP (291) 50
RELATION_OP (292) 49
SYMBOL_OP (293) 43 44
BINARY_OP (294) 45
NEG_COUNT_QUEST (295) 40
MINUSMINUS (296) 42 52
PLUSPLUS (297) 41 56
DOLLAR (298) 38
LIST_OP (299) 37
AT (300) 51 56


No terminales con las reglas donde aparecen

$accept (46)
    en la izquierda: 0
Programa (47)
    en la izquierda: 1, en la derecha: 0
bloque (48)
    en la izquierda: 2, en la derecha: 1 5 19
Declar_de_subprogs (49)
    en la izquierda: 3 4, en la derecha: 2 3
Declar_subprog (50)
    en la izquierda: 5, en la derecha: 3
Declar_de_variables_locales (51)
    en la izquierda: 6, en la derecha: 2
Cabecera_programa (52)
    en la izquierda: 7, en la derecha: 1
Inicio_de_bloque (53)
    en la izquierda: 8, en la derecha: 2
Fin_de_bloque (54)
    en la izquierda: 9, en la derecha: 2
Variables_locales (55)
    en la izquierda: 10 11, en la derecha: 6 10
Cuerpo_declar_variables (56)
    en la izquierda: 12, en la derecha: 10 11
Cabecera_subprograma (57)
    en la izquierda: 13, en la derecha: 5
argumentos (58)
    en la izquierda: 14 15, en la derecha: 13 14
argumento (59)
    en la izquierda: 16, en la derecha: 14 15
Sentencias (60)
    en la izquierda: 17 18, en la derecha: 2 17
Sentencia (61)
    en la izquierda: 19 20 21 22 23 24 25 26 27, en la derecha: 17
    18 29 30 31 35 36
sentencia_asignacion (62)
    en la izquierda: 28, en la derecha: 20
sentencia_if (63)
    en la izquierda: 29 30, en la derecha: 21
sentencia_while (64)
    en la izquierda: 31, en la derecha: 22
sentencia_entrada (65)
    en la izquierda: 32, en la derecha: 23
sentencia_salida (66)
    en la izquierda: 33, en la derecha: 24
sentencia_return (67)
    en la izquierda: 34, en la derecha: 25
sentencia_for (68)
    en la izquierda: 35 36, en la derecha: 26
sentencia_list (69)
    en la izquierda: 37 38, en la derecha: 27
expresion (70)
    en la izquierda: 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54
    55 56, en la derecha: 28 29 30 31 34 35 36 37 38 39 40 41 42 43
    44 45 46 47 48 49 50 51 52 56 61 71 72
funcion (71)
    en la izquierda: 57 58, en la derecha: 55
list_expresiones_o_cadena (72)
    en la izquierda: 59 60, en la derecha: 33 59
exp_cad (73)
    en la izquierda: 61 62, en la derecha: 59 60
constante (74)
    en la izquierda: 63 64 65 66 67 68 69 70, en la derecha: 54
list_expresiones (75)
    en la izquierda: 71 72, en la derecha: 57 71
tipo (76)
    en la izquierda: 73 74, en la derecha: 12 13 16
tipo_elemental (77)
    en la izquierda: 75, en la derecha: 73 74
const_list_int (78)
    en la izquierda: 76, en la derecha: 67
list_int (79)
    en la izquierda: 77 78, en la derecha: 76 77
const_list_double (80)
    en la izquierda: 79, en la derecha: 68
list_double (81)
    en la izquierda: 80 81, en la derecha: 79 80
const_list_boolean (82)
    en la izquierda: 82, en la derecha: 69
list_boolean (83)
    en la izquierda: 83 84, en la derecha: 82 83
const_list_char (84)
    en la izquierda: 85, en la derecha: 70
list_char (85)
    en la izquierda: 86 87, en la derecha: 85 86
list_id (86)
    en la izquierda: 88 89, en la derecha: 12 32 88


Estado 0

    0 $accept: . Programa $end

    MAIN  desplazar e ir al estado 1

    Programa           ir al estado 2
    Cabecera_programa  ir al estado 3


Estado 1

    7 Cabecera_programa: MAIN .

    $default  reduce usando la regla 7 (Cabecera_programa)


Estado 2

    0 $accept: Programa . $end

    $end  desplazar e ir al estado 4


Estado 3

    1 Programa: Cabecera_programa . bloque

    LEFT_KEY  desplazar e ir al estado 5

    bloque            ir al estado 6
    Inicio_de_bloque  ir al estado 7


Estado 4

    0 $accept: Programa $end .

    $default  aceptar


Estado 5

    8 Inicio_de_bloque: LEFT_KEY .

    $default  reduce usando la regla 8 (Inicio_de_bloque)


Estado 6

    1 Programa: Cabecera_programa bloque .

    $default  reduce usando la regla 1 (Programa)


Estado 7

    2 bloque: Inicio_de_bloque . Declar_de_variables_locales Declar_de_subprogs Sentencias Fin_de_bloque

    INITVAR  desplazar e ir al estado 8

    Declar_de_variables_locales  ir al estado 9


Estado 8

    6 Declar_de_variables_locales: INITVAR . Variables_locales ENDVAR

    LIST_OF      desplazar e ir al estado 10
    BASIC_TYPES  desplazar e ir al estado 11

    Variables_locales        ir al estado 12
    Cuerpo_declar_variables  ir al estado 13
    tipo                     ir al estado 14
    tipo_elemental           ir al estado 15


Estado 9

    2 bloque: Inicio_de_bloque Declar_de_variables_locales . Declar_de_subprogs Sentencias Fin_de_bloque

    $default  reduce usando la regla 4 (Declar_de_subprogs)

    Declar_de_subprogs  ir al estado 16


Estado 10

   74 tipo: LIST_OF . tipo_elemental

    BASIC_TYPES  desplazar e ir al estado 11

    tipo_elemental  ir al estado 17


Estado 11

   75 tipo_elemental: BASIC_TYPES .

    $default  reduce usando la regla 75 (tipo_elemental)


Estado 12

    6 Declar_de_variables_locales: INITVAR Variables_locales . ENDVAR
   10 Variables_locales: Variables_locales . Cuerpo_declar_variables

    ENDVAR       desplazar e ir al estado 18
    LIST_OF      desplazar e ir al estado 10
    BASIC_TYPES  desplazar e ir al estado 11

    Cuerpo_declar_variables  ir al estado 19
    tipo                     ir al estado 14
    tipo_elemental           ir al estado 15


Estado 13

   11 Variables_locales: Cuerpo_declar_variables .

    $default  reduce usando la regla 11 (Variables_locales)


Estado 14

   12 Cuerpo_declar_variables: tipo . list_id SEMICOLON

    ID  desplazar e ir al estado 20

    list_id  ir al estado 21


Estado 15

   73 tipo: tipo_elemental .

    $default  reduce usando la regla 73 (tipo)


Estado 16

    2 bloque: Inicio_de_bloque Declar_de_variables_locales Declar_de_subprogs . Sentencias Fin_de_bloque
    3 Declar_de_subprogs: Declar_de_subprogs . Declar_subprog

    LEFT_KEY          desplazar e ir al estado 5
    LEFT_BRACKET      desplazar e ir al estado 22
    LEFT_PARENTHESIS  desplazar e ir al estado 23
    IF                desplazar e ir al estado 24
    WHILE             desplazar e ir al estado 25
    RETURN            desplazar e ir al estado 26
    FOR               desplazar e ir al estado 27
    OUT               desplazar e ir al estado 28
    IN                desplazar e ir al estado 29
    LIST_OF           desplazar e ir al estado 10
    BASIC_TYPES       desplazar e ir al estado 11
    CONST_INT         desplazar e ir al estado 30
    CONST_DOUBLE      desplazar e ir al estado 31
    CONST_BOOLEAN     desplazar e ir al estado 32
    CONST_CHAR        desplazar e ir al estado 33
    ID                desplazar e ir al estado 34
    SYMBOL_OP         desplazar e ir al estado 35
    NEG_COUNT_QUEST   desplazar e ir al estado 36
    MINUSMINUS        desplazar e ir al estado 37
    PLUSPLUS          desplazar e ir al estado 38
    DOLLAR            desplazar e ir al estado 39

    bloque                ir al estado 40
    Declar_subprog        ir al estado 41
    Inicio_de_bloque      ir al estado 7
    Cabecera_subprograma  ir al estado 42
    Sentencias            ir al estado 43
    Sentencia             ir al estado 44
    sentencia_asignacion  ir al estado 45
    sentencia_if          ir al estado 46
    sentencia_while       ir al estado 47
    sentencia_entrada     ir al estado 48
    sentencia_salida      ir al estado 49
    sentencia_return      ir al estado 50
    sentencia_for         ir al estado 51
    sentencia_list        ir al estado 52
    expresion             ir al estado 53
    funcion               ir al estado 54
    constante             ir al estado 55
    tipo                  ir al estado 56
    tipo_elemental        ir al estado 15
    const_list_int        ir al estado 57
    const_list_double     ir al estado 58
    const_list_boolean    ir al estado 59
    const_list_char       ir al estado 60


Estado 17

   74 tipo: LIST_OF tipo_elemental .

    $default  reduce usando la regla 74 (tipo)


Estado 18

    6 Declar_de_variables_locales: INITVAR Variables_locales ENDVAR .

    $default  reduce usando la regla 6 (Declar_de_variables_locales)


Estado 19

   10 Variables_locales: Variables_locales Cuerpo_declar_variables .

    $default  reduce usando la regla 10 (Variables_locales)


Estado 20

   89 list_id: ID .

    $default  reduce usando la regla 89 (list_id)


Estado 21

   12 Cuerpo_declar_variables: tipo list_id . SEMICOLON
   88 list_id: list_id . COMA ID

    SEMICOLON  desplazar e ir al estado 61
    COMA       desplazar e ir al estado 62


Estado 22

   76 const_list_int: LEFT_BRACKET . list_int RIGHT_BRACKET
   79 const_list_double: LEFT_BRACKET . list_double RIGHT_BRACKET
   82 const_list_boolean: LEFT_BRACKET . list_boolean RIGHT_BRACKET
   85 const_list_char: LEFT_BRACKET . list_char RIGHT_BRACKET

    CONST_INT      desplazar e ir al estado 63
    CONST_DOUBLE   desplazar e ir al estado 64
    CONST_BOOLEAN  desplazar e ir al estado 65
    CONST_CHAR     desplazar e ir al estado 66

    list_int      ir al estado 67
    list_double   ir al estado 68
    list_boolean  ir al estado 69
    list_char     ir al estado 70


Estado 23

   39 expresion: LEFT_PARENTHESIS . expresion RIGHT_PARENTHESIS

    LEFT_BRACKET      desplazar e ir al estado 22
    LEFT_PARENTHESIS  desplazar e ir al estado 23
    CONST_INT         desplazar e ir al estado 30
    CONST_DOUBLE      desplazar e ir al estado 31
    CONST_BOOLEAN     desplazar e ir al estado 32
    CONST_CHAR        desplazar e ir al estado 33
    ID                desplazar e ir al estado 71
    SYMBOL_OP         desplazar e ir al estado 35
    NEG_COUNT_QUEST   desplazar e ir al estado 36
    MINUSMINUS        desplazar e ir al estado 37
    PLUSPLUS          desplazar e ir al estado 38

    expresion           ir al estado 72
    funcion             ir al estado 54
    constante           ir al estado 55
    const_list_int      ir al estado 57
    const_list_double   ir al estado 58
    const_list_boolean  ir al estado 59
    const_list_char     ir al estado 60


Estado 24

   29 sentencia_if: IF . LEFT_PARENTHESIS expresion RIGHT_PARENTHESIS THEN Sentencia
   30             | IF . LEFT_PARENTHESIS expresion RIGHT_PARENTHESIS THEN Sentencia ELSE Sentencia

    LEFT_PARENTHESIS  desplazar e ir al estado 73


Estado 25

   31 sentencia_while: WHILE . LEFT_PARENTHESIS expresion RIGHT_PARENTHESIS Sentencia

    LEFT_PARENTHESIS  desplazar e ir al estado 74


Estado 26

   34 sentencia_return: RETURN . expresion SEMICOLON

    LEFT_BRACKET      desplazar e ir al estado 22
    LEFT_PARENTHESIS  desplazar e ir al estado 23
    CONST_INT         desplazar e ir al estado 30
    CONST_DOUBLE      desplazar e ir al estado 31
    CONST_BOOLEAN     desplazar e ir al estado 32
    CONST_CHAR        desplazar e ir al estado 33
    ID                desplazar e ir al estado 71
    SYMBOL_OP         desplazar e ir al estado 35
    NEG_COUNT_QUEST   desplazar e ir al estado 36
    MINUSMINUS        desplazar e ir al estado 37
    PLUSPLUS          desplazar e ir al estado 38

    expresion           ir al estado 75
    funcion             ir al estado 54
    constante           ir al estado 55
    const_list_int      ir al estado 57
    const_list_double   ir al estado 58
    const_list_boolean  ir al estado 59
    const_list_char     ir al estado 60


Estado 27

   35 sentencia_for: FOR . LEFT_PARENTHESIS expresion TO expresion COMA expresion RIGHT_PARENTHESIS DO Sentencia
   36              | FOR . LEFT_PARENTHESIS expresion RIGHT_PARENTHESIS DO Sentencia

    LEFT_PARENTHESIS  desplazar e ir al estado 76


Estado 28

   33 sentencia_salida: OUT . list_expresiones_o_cadena SEMICOLON

    LEFT_BRACKET      desplazar e ir al estado 22
    LEFT_PARENTHESIS  desplazar e ir al estado 23
    CONST_INT         desplazar e ir al estado 30
    CONST_DOUBLE      desplazar e ir al estado 31
    CONST_BOOLEAN     desplazar e ir al estado 32
    CONST_CHAR        desplazar e ir al estado 33
    CADENA            desplazar e ir al estado 77
    ID                desplazar e ir al estado 71
    SYMBOL_OP         desplazar e ir al estado 35
    NEG_COUNT_QUEST   desplazar e ir al estado 36
    MINUSMINUS        desplazar e ir al estado 37
    PLUSPLUS          desplazar e ir al estado 38

    expresion                  ir al estado 78
    funcion                    ir al estado 54
    list_expresiones_o_cadena  ir al estado 79
    exp_cad                    ir al estado 80
    constante                  ir al estado 55
    const_list_int             ir al estado 57
    const_list_double          ir al estado 58
    const_list_boolean         ir al estado 59
    const_list_char            ir al estado 60


Estado 29

   32 sentencia_entrada: IN . list_id SEMICOLON

    ID  desplazar e ir al estado 20

    list_id  ir al estado 81


Estado 30

   63 constante: CONST_INT .

    $default  reduce usando la regla 63 (constante)


Estado 31

   64 constante: CONST_DOUBLE .

    $default  reduce usando la regla 64 (constante)


Estado 32

   66 constante: CONST_BOOLEAN .

    $default  reduce usando la regla 66 (constante)


Estado 33

   65 constante: CONST_CHAR .

    $default  reduce usando la regla 65 (constante)


Estado 34

   28 sentencia_asignacion: ID . ASSIGN expresion SEMICOLON
   53 expresion: ID .
   57 funcion: ID . LEFT_PARENTHESIS list_expresiones RIGHT_PARENTHESIS
   58        | ID . LEFT_PARENTHESIS RIGHT_PARENTHESIS

    LEFT_PARENTHESIS  desplazar e ir al estado 82
    ASSIGN            desplazar e ir al estado 83

    $default  reduce usando la regla 53 (expresion)


Estado 35

   43 expresion: SYMBOL_OP . expresion

    LEFT_BRACKET      desplazar e ir al estado 22
    LEFT_PARENTHESIS  desplazar e ir al estado 23
    CONST_INT         desplazar e ir al estado 30
    CONST_DOUBLE      desplazar e ir al estado 31
    CONST_BOOLEAN     desplazar e ir al estado 32
    CONST_CHAR        desplazar e ir al estado 33
    ID                desplazar e ir al estado 71
    SYMBOL_OP         desplazar e ir al estado 35
    NEG_COUNT_QUEST   desplazar e ir al estado 36
    MINUSMINUS        desplazar e ir al estado 37
    PLUSPLUS          desplazar e ir al estado 38

    expresion           ir al estado 84
    funcion             ir al estado 54
    constante           ir al estado 55
    const_list_int      ir al estado 57
    const_list_double   ir al estado 58
    const_list_boolean  ir al estado 59
    const_list_char     ir al estado 60


Estado 36

   40 expresion: NEG_COUNT_QUEST . expresion

    LEFT_BRACKET      desplazar e ir al estado 22
    LEFT_PARENTHESIS  desplazar e ir al estado 23
    CONST_INT         desplazar e ir al estado 30
    CONST_DOUBLE      desplazar e ir al estado 31
    CONST_BOOLEAN     desplazar e ir al estado 32
    CONST_CHAR        desplazar e ir al estado 33
    ID                desplazar e ir al estado 71
    SYMBOL_OP         desplazar e ir al estado 35
    NEG_COUNT_QUEST   desplazar e ir al estado 36
    MINUSMINUS        desplazar e ir al estado 37
    PLUSPLUS          desplazar e ir al estado 38

    expresion           ir al estado 85
    funcion             ir al estado 54
    constante           ir al estado 55
    const_list_int      ir al estado 57
    const_list_double   ir al estado 58
    const_list_boolean  ir al estado 59
    const_list_char     ir al estado 60


Estado 37

   42 expresion: MINUSMINUS . expresion

    LEFT_BRACKET      desplazar e ir al estado 22
    LEFT_PARENTHESIS  desplazar e ir al estado 23
    CONST_INT         desplazar e ir al estado 30
    CONST_DOUBLE      desplazar e ir al estado 31
    CONST_BOOLEAN     desplazar e ir al estado 32
    CONST_CHAR        desplazar e ir al estado 33
    ID                desplazar e ir al estado 71
    SYMBOL_OP         desplazar e ir al estado 35
    NEG_COUNT_QUEST   desplazar e ir al estado 36
    MINUSMINUS        desplazar e ir al estado 37
    PLUSPLUS          desplazar e ir al estado 38

    expresion           ir al estado 86
    funcion             ir al estado 54
    constante           ir al estado 55
    const_list_int      ir al estado 57
    const_list_double   ir al estado 58
    const_list_boolean  ir al estado 59
    const_list_char     ir al estado 60


Estado 38

   41 expresion: PLUSPLUS . expresion

    LEFT_BRACKET      desplazar e ir al estado 22
    LEFT_PARENTHESIS  desplazar e ir al estado 23
    CONST_INT         desplazar e ir al estado 30
    CONST_DOUBLE      desplazar e ir al estado 31
    CONST_BOOLEAN     desplazar e ir al estado 32
    CONST_CHAR        desplazar e ir al estado 33
    ID                desplazar e ir al estado 71
    SYMBOL_OP         desplazar e ir al estado 35
    NEG_COUNT_QUEST   desplazar e ir al estado 36
    MINUSMINUS        desplazar e ir al estado 37
    PLUSPLUS          desplazar e ir al estado 38

    expresion           ir al estado 87
    funcion             ir al estado 54
    constante           ir al estado 55
    const_list_int      ir al estado 57
    const_list_double   ir al estado 58
    const_list_boolean  ir al estado 59
    const_list_char     ir al estado 60


Estado 39

   38 sentencia_list: DOLLAR . expresion

    LEFT_BRACKET      desplazar e ir al estado 22
    LEFT_PARENTHESIS  desplazar e ir al estado 23
    CONST_INT         desplazar e ir al estado 30
    CONST_DOUBLE      desplazar e ir al estado 31
    CONST_BOOLEAN     desplazar e ir al estado 32
    CONST_CHAR        desplazar e ir al estado 33
    ID                desplazar e ir al estado 71
    SYMBOL_OP         desplazar e ir al estado 35
    NEG_COUNT_QUEST   desplazar e ir al estado 36
    MINUSMINUS        desplazar e ir al estado 37
    PLUSPLUS          desplazar e ir al estado 38

    expresion           ir al estado 88
    funcion             ir al estado 54
    constante           ir al estado 55
    const_list_int      ir al estado 57
    const_list_double   ir al estado 58
    const_list_boolean  ir al estado 59
    const_list_char     ir al estado 60


Estado 40

   19 Sentencia: bloque .

    $default  reduce usando la regla 19 (Sentencia)


Estado 41

    3 Declar_de_subprogs: Declar_de_subprogs Declar_subprog .

    $default  reduce usando la regla 3 (Declar_de_subprogs)


Estado 42

    5 Declar_subprog: Cabecera_subprograma . bloque

    LEFT_KEY  desplazar e ir al estado 5

    bloque            ir al estado 89
    Inicio_de_bloque  ir al estado 7


Estado 43

    2 bloque: Inicio_de_bloque Declar_de_variables_locales Declar_de_subprogs Sentencias . Fin_de_bloque
   17 Sentencias: Sentencias . Sentencia

    LEFT_KEY          desplazar e ir al estado 5
    RIGHT_KEY         desplazar e ir al estado 90
    LEFT_BRACKET      desplazar e ir al estado 22
    LEFT_PARENTHESIS  desplazar e ir al estado 23
    IF                desplazar e ir al estado 24
    WHILE             desplazar e ir al estado 25
    RETURN            desplazar e ir al estado 26
    FOR               desplazar e ir al estado 27
    OUT               desplazar e ir al estado 28
    IN                desplazar e ir al estado 29
    CONST_INT         desplazar e ir al estado 30
    CONST_DOUBLE      desplazar e ir al estado 31
    CONST_BOOLEAN     desplazar e ir al estado 32
    CONST_CHAR        desplazar e ir al estado 33
    ID                desplazar e ir al estado 34
    SYMBOL_OP         desplazar e ir al estado 35
    NEG_COUNT_QUEST   desplazar e ir al estado 36
    MINUSMINUS        desplazar e ir al estado 37
    PLUSPLUS          desplazar e ir al estado 38
    DOLLAR            desplazar e ir al estado 39

    bloque                ir al estado 40
    Inicio_de_bloque      ir al estado 7
    Fin_de_bloque         ir al estado 91
    Sentencia             ir al estado 92
    sentencia_asignacion  ir al estado 45
    sentencia_if          ir al estado 46
    sentencia_while       ir al estado 47
    sentencia_entrada     ir al estado 48
    sentencia_salida      ir al estado 49
    sentencia_return      ir al estado 50
    sentencia_for         ir al estado 51
    sentencia_list        ir al estado 52
    expresion             ir al estado 53
    funcion               ir al estado 54
    constante             ir al estado 55
    const_list_int        ir al estado 57
    const_list_double     ir al estado 58
    const_list_boolean    ir al estado 59
    const_list_char       ir al estado 60


Estado 44

   18 Sentencias: Sentencia .

    $default  reduce usando la regla 18 (Sentencias)


Estado 45

   20 Sentencia: sentencia_asignacion .

    $default  reduce usando la regla 20 (Sentencia)


Estado 46

   21 Sentencia: sentencia_if .

    $default  reduce usando la regla 21 (Sentencia)


Estado 47

   22 Sentencia: sentencia_while .

    $default  reduce usando la regla 22 (Sentencia)


Estado 48

   23 Sentencia: sentencia_entrada .

    $default  reduce usando la regla 23 (Sentencia)


Estado 49

   24 Sentencia: sentencia_salida .

    $default  reduce usando la regla 24 (Sentencia)


Estado 50

   25 Sentencia: sentencia_return .
